[metadata]
name = cloud_interpolator
version = attr: cloud_interpolator.__version__
author = Eloi Demolis
author_email = coop@cerfacs.fr
description = Cloud interpolator
long_description = file: README.md
url = https://github.com/Wonshtrum/CloudInterpolator
project_urls =
	Bug Tracker = https://github.com/Wonshtrum/CloudInterpolator/issues
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
